src/App.scss
/* ... */
/* ===== Socials ===== */
.socials {
  margin: 0 auto;
  .socials-button {
    cursor: pointer;
    display: inline-block;
    height: 2rem;
    width: 2rem;
    margin: 1rem;
    padding: 0;
    .faicon {
      width: 100%;
      height: 100%;
    }
    img {
      width: 100%;
      height: auto;
      vertical-align: -2px;
    }
  }
  .socials-button-labelled {
    cursor: pointer;
    display: inline-block;
    height: 2rem;
    width: auto;
    margin: 1rem;
    padding: 0;
    .faicon {
      width: 2rem;
      height: auto;
    }
    img {
      width: 100%;
      height: auto;
      vertical-align: -2px;
    }
    .inner-text {
      display: inline-block;
      margin-left: 0.2rem;
      font-size: 0.7rem;
    }
  }
}

.quick-actions {
  margin: 1rem auto;
  max-width: 52rem;
  .popup-button {
    margin-top: 1rem;
    width: auto;
    display: inline-flex;

    @media (max-width: 767px) {
      width: 100%;
      text-align: center;
      justify-content: center;
    }
  }
}

.masthead {
  padding-left: 1rem;
  padding-right: 1rem;
  background: $primary;
  color: $light;
  .title {
    max-width: 40rem;
    font-weight: bold;
    line-height: 150%;
  }
  .lead {
    max-width: 30rem;
    line-height: 170%;
  }
  .logo {
    width: 25rem;
    height: 25rem;
  }
  .logo-mobile {
    width: 70%;
    height: auto;
  }
}

.accessibility {
  padding-left: 1rem;
  padding-right: 1rem;
  background: $secondary;
  .description {
    .title {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
      h2 {
        font-weight: bold;
      }
      .faicon {
        width: 5rem;
        height: auto;
      }
      .demo {
        height: 2.5rem;
        width: auto;
      }
    }
    .lead {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
    }
  }
}

.listings {
  padding-left: 1rem;
  padding-right: 1rem;
  background: $secondary;
  .description {
    .title {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
      h2 {
        font-weight: bold;
      }
      .faicon {
        width: 5rem;
        height: auto;
      }
      .demo {
        height: 1.5rem;
        width: auto;
      }
    }
    .lead {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
    }
  }
}

.community {
  padding-left: 1rem;
  padding-right: 1rem;
  background: $secondary;
  .description {
    .title {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
      h2 {
        font-weight: bold;
      }
      .faicon {
        width: 5rem;
        height: auto;
      }
      .demo {
        height: 2.5rem;
        width: auto;
      }
    }
    .lead {
      width: 50%;
      @media (max-width: 991px) {
        width: 100%;
      }
    }
  }
}

.dyor {
  padding-left: 1rem;
  padding-right: 1rem;
  .description {
    .title {
      max-width: 50%;
      @media (max-width: 991px) {
        max-width: 100%;
      }
      h2 {
        font-weight: bold;
      }
      .faicon {
        width: 5rem;
        height: auto;
      }
      .demo {
        height: 3.5rem;
        width: auto;
      }
    }
    .lead {
      max-width: 50%;
      @media (max-width: 991px) {
        max-width: 100%;
      }
    }
  }
}

.section-footer {
  padding: 1rem;
  background-color: $primary;
  span {
    color: $secondary !important;
  }
}

.divider-custom {
  margin: 1.25rem 0 1.5rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.divider-custom .divider-custom-line {
  width: 100%;
  max-width: 7rem;
  height: 0.25rem;
  background-color: $primary;
  border-radius: 1rem;
  border-color: $primary !important;
}
.divider-custom .divider-custom-line:first-child {
  margin-right: 1rem;
}
.divider-custom .divider-custom-line:last-child {
  margin-left: 1rem;
}
.divider-custom .divider-custom-icon {
  color: $primary !important;
  font-size: 2rem;
}
.divider-custom.divider-light .divider-custom-line {
  background-color: #fff;
}
.divider-custom.divider-light .divider-custom-icon {
  color: #fff !important;
}


/* ===== PROJECTS ===== */

.project-card {
  text-align: center;
  padding: 1rem;
  width: 18rem;
  height: 16rem;
}

.project-card .logo-holder {
  width: 100%;
  margin-bottom: 1rem;
  padding: 0;
}

.project-card .faicon {
  color: $primary;
  font-size: 2.5rem;
  padding: 0;
  margin: 0;
}

.project-card img {
  width: 2.5rem;
  padding: 0;
  margin: 0;
}

.project-card button {
  margin-bottom: 1rem;
}

/* ===== WALLETS ===== */
.wallet-section {
  margin: 2rem auto;
  max-width: 30rem;
}
.wallet-section p {
  margin-bottom: 0.5rem;
}

.wallet-download {
  display: inline-block;
}
.wallet-download .faicon {
  color: $primary;
  font-size: 2rem;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  width: 100%;
}

/* ===== ROADMAP ===== */

.timeline {
  border-left: 3px solid #2c3e50;
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
  margin: 0 auto;
  letter-spacing: 0.2px;
  position: relative;
  line-height: 1.4em;
  font-size: 1.03em;
  padding: 5px 50px 0 50px;
  list-style: none;
  text-align: left;
  max-width: 60%;
}

@media (max-width: 767px) {
  .timeline {
    max-width: 98%;
    padding: 25px;
  }
}

.timeline h1 {
  font-weight: 300;
  font-size: 1.4em;
}

.timeline h2,
.timeline h3 {
  font-weight: 600;
  font-size: 1rem;
  margin-bottom: 10px;
}

.timeline .event {
  padding-bottom: 15px;
  margin-bottom: 15px;
  position: relative;
}

@media (max-width: 767px) {
  .timeline .event {
    padding-top: 30px;
  }
}

.timeline .event:last-of-type {
  padding-bottom: 0;
  margin-bottom: 0;
  border: none;
}

.timeline .event:before,
.timeline .event:after {
  position: absolute;
  display: block;
  top: 0;
}

.timeline .event:before {
  left: -207px;
  content: attr(data-date);

  text-align: right;
  font-weight: 900;
  font-size: 0.9em;
  min-width: 120px;
}

.timeline .eventcompleted {
  color: #000000;
}
/* ... */

